--- a/wordle/assets/styles/boxes.css
+++ b/wordle/assets/styles/boxes.css
@@ -123,7 +123,31 @@
     top:50%;
     transform:translate(200%, 200%);
 }
-
+#b61{
+    left:50%;
+    top:50%;
+    transform:translate(-300%, 325%);
+}
+#b62{
+    left:50%;
+    top:50%;
+    transform:translate(-175%, 325%);
+}
+#b63{
+    left:50%;
+    top:50%;
+    transform:translate(-50%, 325%);
+}
+#b64{
+    left:50%;
+    top:50%;
+    transform:translate(75%, 325%);
+}
+#b65{
+    left:50%;
+    top:50%;
+    transform:translate(200%, 325%);
+}
 /*
 .c1{
                 left:50%;
